Actions
Bug #10135
closedpicl plugins need smatch fixes
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
A couple of small fixes needed, found by smatch.
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 720c4860f9da1099f11e91ddd7f4d0edaf46c20a
commit 720c4860f9da1099f11e91ddd7f4d0edaf46c20a Author: John Levon <john.levon@joyent.com> Date: 2019-03-30T21:09:24.000Z 10135 picl plugins need smatch fixes Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions